l3doc: make most options ".value_forbidden:"

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1956,20 +1956,24 @@ Do not distribute a modified version of this file.
 %    \begin{macrocode}
 \keys_define:nn { l3doc/function }
   {
+    TF .value_forbidden: ,
     TF .code:n =
       {
         \bool_set_true:N \l_@@_macro_TF_bool
       } ,
+    EXP .value_forbidden: ,
     EXP .code:n =
       {
         \bool_set_true:N \l_@@_macro_EXP_bool
         \bool_set_false:N \l_@@_macro_rEXP_bool
       } ,
+    rEXP .value_forbidden: ,
     rEXP .code:n =
       {
         \bool_set_false:N \l_@@_macro_EXP_bool
         \bool_set_true:N \l_@@_macro_rEXP_bool
       } ,
+    pTF .value_forbidden: ,
     pTF .code:n =
       {
         \bool_set_true:N \l_@@_macro_pTF_bool
@@ -1981,6 +1985,7 @@ Do not distribute a modified version of this file.
     updated .tl_set:N = \l_@@_date_updated_tl ,
     tested .code:n = { } ,
     no-label .bool_set:N = \l_@@_no_label_bool ,
+    verb .value_forbidden: ,
     verb .bool_set:N = \l_@@_names_verb_bool ,
   }
 %    \end{macrocode}
@@ -2315,22 +2320,27 @@ Do not distribute a modified version of this file.
 %
 % \subsubsection{The \env{macro} environment}
 %
-% Keyval for the \env{macro} environment.  TODO: use
-% |.value_forbidden:|.  TODO: provide document command for talking about
-% keys.
+% Keyval for the \env{macro} environment.
+% TODO: provide document command for documenting keys.
 %    \begin{macrocode}
 \keys_define:nn { l3doc/macro }
   {
+    aux .value_forbidden: ,
     aux .code:n =
       { \bool_set_true:N \l_@@_macro_aux_bool } ,
+    internal .value_forbidden: ,
     internal .code:n =
       { \bool_set_true:N \l_@@_macro_internal_bool } ,
+    int .value_forbidden: ,
     int .code:n =
       { \bool_set_true:N \l_@@_macro_internal_bool } ,
+    var .value_forbidden: ,
     var .code:n =
       { \bool_set_true:N \l_@@_macro_var_bool } ,
+    TF .value_forbidden: ,
     TF .code:n =
       { \bool_set_true:N \l_@@_macro_TF_bool } ,
+    pTF .value_forbidden: ,
     pTF .code:n =
       {
         \bool_set_true:N \l_@@_macro_TF_bool
@@ -2338,11 +2348,13 @@ Do not distribute a modified version of this file.
         \bool_set_true:N \l_@@_macro_EXP_bool
         \bool_set_false:N \l_@@_macro_rEXP_bool
       } ,
+    EXP .value_forbidden: ,
     EXP .code:n =
       {
         \bool_set_true:N \l_@@_macro_EXP_bool
         \bool_set_false:N \l_@@_macro_rEXP_bool
       } ,
+    rEXP .value_forbidden: ,
     rEXP .code:n =
       {
         \bool_set_false:N \l_@@_macro_EXP_bool
