l3doc: Repair commit r6662, namely repair a few links

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -689,12 +689,13 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_tmpa_tl, \l_@@_tmpb_tl, \l_@@_tmpa_int}
+% \begin{variable}[int]{\l_@@_tmpa_tl, \l_@@_tmpb_tl, \l_@@_tmpa_int, \l_@@_tmpa_seq}
 %   Some temporary variables.
 %    \begin{macrocode}
 \tl_new:N \l_@@_tmpa_tl
 \tl_new:N \l_@@_tmpb_tl
 \int_new:N \l_@@_tmpa_int
+\int_new:N \l_@@_tmpa_seq
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2730,16 +2731,16 @@ Do not distribute a modified version of this file.
   }
 \cs_new_protected:Npn \@@_print_end_definition:
   {
-    \seq_gset_map:NNn \g_@@_nested_names_seq
+    \seq_set_map:NNn \l_@@_tmpa_seq
       \g_@@_nested_names_seq
       { \exp_not:n { \@@_macro_end_wrap_item:n {##1} } }
     End~ definition~ for~
-    \int_compare:nTF { \seq_count:N \g_@@_nested_names_seq <= 3 }
+    \int_compare:nTF { \seq_count:N \l_@@_tmpa_seq <= 3 }
       {
-        \seq_use:Nnnn \g_@@_nested_names_seq
+        \seq_use:Nnnn \l_@@_tmpa_seq
           { \,~and~ } { \,,~ } { \,,~and~ }
       }
-      { \seq_item:Nn \g_@@_nested_names_seq {1}\,~and~others }
+      { \seq_item:Nn \l_@@_tmpa_seq {1}\,~and~others }
     \@.
     \@@_print_documented:
   }
@@ -2757,6 +2758,7 @@ Do not distribute a modified version of this file.
         \bool_if:NTF \l_@@_macro_var_bool {variable} {function}
         \int_compare:nNnTF \l_@@_tmpa_int = 1 {~is~} {s~are~}
         documented~on~page~
+        \bool_set_false:N \l_@@_macro_TF_bool
         \exp_args:Nx \@@_get_hyper_target:nN
           { \seq_item:Nn \g_@@_nested_names_seq { 1 } }
           \l_@@_tmpa_tl
