--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1957,24 +1957,24 @@ Do not distribute a modified version of this file.
 %    \begin{macrocode}
 \keys_define:nn { l3doc/function }
   {
-    TF .value_forbidden: ,
+    TF .value_forbidden:n = true ,
     TF .code:n =
       {
         \bool_set_true:N \l_@@_macro_TF_bool
       } ,
-    EXP .value_forbidden: ,
+    EXP .value_forbidden:n = true ,
     EXP .code:n =
       {
         \bool_set_true:N \l_@@_macro_EXP_bool
         \bool_set_false:N \l_@@_macro_rEXP_bool
       } ,
-    rEXP .value_forbidden: ,
+    rEXP .value_forbidden:n = true ,
     rEXP .code:n =
       {
         \bool_set_false:N \l_@@_macro_EXP_bool
         \bool_set_true:N \l_@@_macro_rEXP_bool
       } ,
-    pTF .value_forbidden: ,
+    pTF .value_forbidden:n = true ,
     pTF .code:n =
       {
         \bool_set_true:N \l_@@_macro_pTF_bool
@@ -1986,7 +1986,7 @@ Do not distribute a modified version of this file.
     updated .tl_set:N = \l_@@_date_updated_tl ,
     tested .code:n = { } ,
     no-label .bool_set:N = \l_@@_no_label_bool ,
-    verb .value_forbidden: ,
+    verb .value_forbidden:n = true ,
     verb .bool_set:N = \l_@@_names_verb_bool ,
   }
 %    \end{macrocode}
@@ -2326,22 +2326,22 @@ Do not distribute a modified version of this file.
 %    \begin{macrocode}
 \keys_define:nn { l3doc/macro }
   {
-    aux .value_forbidden: ,
+    aux .value_forbidden:n = true ,
     aux .code:n =
       { \bool_set_true:N \l_@@_macro_aux_bool } ,
-    internal .value_forbidden: ,
+    internal .value_forbidden:n = true ,
     internal .code:n =
       { \bool_set_true:N \l_@@_macro_internal_bool } ,
-    int .value_forbidden: ,
+    int .value_forbidden:n = true ,
     int .code:n =
       { \bool_set_true:N \l_@@_macro_internal_bool } ,
-    var .value_forbidden: ,
+    var .value_forbidden:n = true ,
     var .code:n =
       { \bool_set_true:N \l_@@_macro_var_bool } ,
-    TF .value_forbidden: ,
+    TF .value_forbidden:n = true ,
     TF .code:n =
       { \bool_set_true:N \l_@@_macro_TF_bool } ,
-    pTF .value_forbidden: ,
+    pTF .value_forbidden:n = true ,
     pTF .code:n =
       {
         \bool_set_true:N \l_@@_macro_TF_bool
@@ -2349,13 +2349,13 @@ Do not distribute a modified version of this file.
         \bool_set_true:N \l_@@_macro_EXP_bool
         \bool_set_false:N \l_@@_macro_rEXP_bool
       } ,
-    EXP .value_forbidden: ,
+    EXP .value_forbidden:n = true ,
     EXP .code:n =
       {
         \bool_set_true:N \l_@@_macro_EXP_bool
         \bool_set_false:N \l_@@_macro_rEXP_bool
       } ,
-    rEXP .value_forbidden: ,
+    rEXP .value_forbidden:n = true ,
     rEXP .code:n =
       {
         \bool_set_false:N \l_@@_macro_EXP_bool
