l3doc: keys module and deprecated for function and macro environments
I had only added "deprecated" to the function environment, now also added
to the macro environment, and using yyyy-mm-dd style dates rather than
yyyy/mm/dd.  The "module" key overrides the module guessed by l3doc for
indexing of these instances of the functions/macros.

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -664,6 +664,7 @@ Do not distribute a modified version of this file.
 %     \l_@@_macro_EXP_bool,
 %     \l_@@_macro_rEXP_bool,
 %     \l_@@_macro_var_bool,
+%     \l_@@_override_module_tl,
 %   }
 %   Contain information about some options of function/macro
 %   environments:
@@ -675,6 +676,7 @@ Do not distribute a modified version of this file.
 \bool_new:N \l_@@_macro_EXP_bool
 \bool_new:N \l_@@_macro_rEXP_bool
 \bool_new:N \l_@@_macro_var_bool
+\tl_new:N \l_@@_override_module_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -870,11 +872,11 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}[int]{\l_@@_function_argument_tl}
-%   Save the argument of a \env{function} environment for use in error
-%   messages.
+% \begin{variable}[int]{\l_@@_macro_argument_tl}
+%   Save the argument of a \env{macro} or \env{function} environment for
+%   use in error messages.
 %    \begin{macrocode}
-\tl_new:N \l_@@_function_argument_tl
+\tl_new:N \l_@@_macro_argument_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -1207,9 +1209,9 @@ Do not distribute a modified version of this file.
 % \begin{macro}[aux]{\@@_date_compare_aux:nnnNnnn, \@@_date_compare_aux:w}
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_date_compare:nNn #1#2#3 { TF , T , F , p }
-  { \@@_date_compare_aux:w #1/// \q_mark #2 #3/// \q_stop }
+  { \@@_date_compare_aux:w #1--- \q_mark #2 #3--- \q_stop }
 \cs_new:Npn \@@_date_compare_aux:w
-    #1 / #2 / #3 / #4 \q_mark #5 #6 / #7 / #8 / #9 \q_stop
+    #1 - #2 - #3 - #4 \q_mark #5 #6 - #7 - #8 - #9 \q_stop
   {
     \@@_date_compare_aux:nnnNnnn
       { \tl_if_empty:nTF {#1} { 0 } {#1} }
@@ -2109,6 +2111,7 @@ Do not distribute a modified version of this file.
     no-label .bool_set:N = \l_@@_no_label_bool ,
     verb .value_forbidden:n = true ,
     verb .bool_set:N = \l_@@_names_verb_bool ,
+    module .tl_set:N = \l_@@_override_module_tl ,
   }
 %    \end{macrocode}
 %
@@ -2120,7 +2123,7 @@ Do not distribute a modified version of this file.
     \@@_date_compare:nNnT {#1} < { \tex_year:D / \tex_month:D / \tex_day:D }
       {
         \msg_error:nnxx { l3doc } { deprecated-function }
-          { \tl_to_str:N \l_@@_function_argument_tl } {#1}
+          { \tl_to_str:N \l_@@_macro_argument_tl } {#1}
       }
   }
 %    \end{macrocode}
@@ -2147,11 +2150,12 @@ Do not distribute a modified version of this file.
   {
     \@@_function_typeset_start:
     \@@_function_init:
-    \tl_set:Nn \l_@@_function_argument_tl {#2}
+    \tl_set:Nn \l_@@_macro_argument_tl {#2}
     \keys_set:nn { l3doc/function } {#1}
     \@@_names_get_seq:nN {#2} \l_@@_names_seq
     \@@_names_parse:
     \@@_function_typeset:
+    \@@_function_reset:
     \@@_function_descr_start:w
   }
 \cs_new_protected:Npn \@@_function_end:
@@ -2202,10 +2206,21 @@ Do not distribute a modified version of this file.
       \bool_set_false:N \l_@@_macro_rEXP_bool
       \bool_set_false:N \l_@@_no_label_bool
       \bool_set_false:N \l_@@_names_verb_bool
+      \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
       \char_set_catcode_active:N \<
       \cs_set_protected:Npn < ##1 > { \meta {##1} }
   }
 \group_end:
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[aux]{\@@_function_reset:}
+%   Clear some variables.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_function_reset:
+  {
+    \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -2502,7 +2517,9 @@ Do not distribute a modified version of this file.
       } ,
     added .code:n = {} , % TODO
     updated .code:n = {} , % TODO
+    deprecated .code:n = { \@@_deprecated_on:n {#1} } ,
     verb .bool_set:N = \l_@@_names_verb_bool ,
+    module .tl_set:N = \l_@@_override_module_tl ,
   }
 %    \end{macrocode}
 %
@@ -2518,12 +2535,14 @@ Do not distribute a modified version of this file.
 \cs_new_protected:Npn \@@_macro:nnw #1#2
   {
     \@@_macro_init:
+    \tl_set:Nn \l_@@_macro_argument_tl {#2}
     \keys_set:nn { l3doc/macro } {#1}
     \@@_names_get_seq:nN {#2} \l_@@_names_seq
     \@@_names_parse:
     \@@_macro_adjust_internal:
     \@@_names_typeset:
     \@@_macro_dump:
+    \@@_macro_reset:
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2545,6 +2564,7 @@ Do not distribute a modified version of this file.
     \bool_set_false:N \l_@@_macro_var_bool
     \bool_set_false:N \l_@@_macro_tested_bool
     \bool_set_false:N \l_@@_names_verb_bool
+    \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
     \cs_set_eq:NN \testfile \@@_print_testfile:n
     \box_clear:N \l_@@_macro_index_box
     \vbox_set:Nn \l_@@_macro_box
@@ -2552,6 +2572,17 @@ Do not distribute a modified version of this file.
         \hbox:n { \strut }
         \vskip \int_eval:n { \l_@@_macro_int - 1 } \baselineskip
       }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[aux]{\@@_macro_reset:}
+%   We ensure that \cs{cs} commands nested inside a macro whose module
+%   is imposed are not affected.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_macro_reset:
+  {
+    \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
   }
 %    \end{macrocode}
 % \end{macro}
@@ -3576,11 +3607,13 @@ Do not distribute a modified version of this file.
 % \end{macro}
 %
 % \begin{macro}[aux]{\@@_special_index:nn}
-% ^^A TODO comment TODO stringify?
+% ^^A TODO this override is somewhat a hack
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_special_index:nn #1#2
   {
     \@@_key_get:n {#1}
+    \quark_if_no_value:NF \l_@@_override_module_tl
+      { \tl_set_eq:NN \l_@@_index_module_tl \l_@@_override_module_tl }
     \@@_special_index_module:ooonN
       { \l_@@_index_key_tl }
       { \l_@@_index_macro_tl }
