--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -665,7 +665,7 @@ Do not distribute a modified version of this file.
 %     \l_@@_macro_rEXP_bool,
 %     \l_@@_macro_var_bool,
 %     \l_@@_override_module_tl,
-%     \l_@@_macro_documented_clist,
+%     \l_@@_macro_documented_tl,
 %   }
 %   Contain information about some options of function/macro
 %   environments.  We initialize \cs{l_@@_override_module_tl} to avoid
@@ -680,7 +680,7 @@ Do not distribute a modified version of this file.
 \bool_new:N \l_@@_macro_var_bool
 \tl_new:N \l_@@_override_module_tl
 \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
-\clist_new:N \l_@@_macro_documented_clist
+\tl_new:N \l_@@_macro_documented_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -2546,7 +2546,7 @@ Do not distribute a modified version of this file.
     deprecated .code:n = { \@@_deprecated_on:n {#1} } ,
     verb .bool_set:N = \l_@@_names_verb_bool ,
     module .tl_set:N = \l_@@_override_module_tl ,
-    documented-as .clist_set:N = \l_@@_macro_documented_clist ,
+    documented-as .tl_set:N = \l_@@_macro_documented_tl ,
   }
 %    \end{macrocode}
 %
@@ -2592,7 +2592,7 @@ Do not distribute a modified version of this file.
     \bool_set_false:N \l_@@_macro_tested_bool
     \bool_set_false:N \l_@@_names_verb_bool
     \tl_set:Nn \l_@@_override_module_tl { \q_no_value }
-    \clist_clear:N \l_@@_macro_documented_clist
+    \tl_clear:N \l_@@_macro_documented_tl
     \cs_set_eq:NN \testfile \@@_print_testfile:n
     \box_clear:N \l_@@_macro_index_box
     \vbox_set:Nn \l_@@_macro_box
@@ -2970,24 +2970,27 @@ Do not distribute a modified version of this file.
         ! \l_@@_macro_internal_bool
       }
       {
-        \clist_if_empty:NF \l_@@_macro_documented_clist
-          {
-            \seq_gset_from_clist:NN
-              \g_@@_nested_names_seq
-              \l_@@_macro_documented_clist
-            \seq_gset_map:NNn \g_@@_nested_names_seq
-              \g_@@_nested_names_seq
-              { \tl_to_str:o { \token_to_str:N ##1 } }
-          }
         \int_set:Nn \l_@@_tmpa_int
           { \seq_count:N \g_@@_nested_names_seq }
+        \tl_if_empty:NTF \l_@@_macro_documented_tl
+          {
+            \tl_set:Nx \l_@@_macro_documented_tl
+              { \seq_item:Nn \g_@@_nested_names_seq { 1 } }
+          }
+          {
+            \tl_set:Nf \l_@@_macro_documented_tl
+              {
+                \exp_after:wN \token_to_str:N
+                \l_@@_macro_documented_tl
+              }
+          }
         \int_compare:nNnTF \l_@@_tmpa_int = 1 {~This~} {~These~}
         \bool_if:NTF \l_@@_macro_var_bool {variable} {function}
         \int_compare:nNnTF \l_@@_tmpa_int = 1 {~is~} {s~are~}
         documented~on~page~
         \bool_set_false:N \l_@@_macro_TF_bool
-        \exp_args:Nx \@@_get_hyper_target:nN
-          { \seq_item:Nn \g_@@_nested_names_seq { 1 } }
+        \exp_args:No \@@_get_hyper_target:nN
+          \l_@@_macro_documented_tl
           \l_@@_tmpa_tl
         \exp_args:Nx \pageref { \l_@@_tmpa_tl } .
       }
