Use new l3doc keys to get rid of all label warnings in l3kernel
The doc should now build with only Overfull/Underfull hbox
warnings, but no label warning (neither missing label nor
label multiply defined).  This commit also gets rid of some
meaningless index entries, but that task is not complete.

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -1418,7 +1418,8 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\token_to_meaning:c, \token_to_str:c, \cs_meaning:c}
+% \begin{macro}[EXP, documented-as=\token_to_meaning:N]
+%   {\token_to_meaning:c, \token_to_str:c, \cs_meaning:c}
 %   A small number of variants defined by hand.
 %   Some of the necessary functions
 %   (\cs{use_i:nn}, \cs{use_ii:nn}, and \cs{exp_args:NNc}) are not
@@ -2292,7 +2293,7 @@
 %    allow us to generate error messages. The definitions here are
 %    only temporary, they will be redefined later on.
 %
-% \begin{macro}{\iow_log:x, \iow_term:x}
+% \begin{macro}[documented-as=\iow_log:n]{\iow_log:x, \iow_term:x}
 %    We define a routine to write only to the log file. And a
 %    similar one for writing to both the log file and the terminal.
 %    These will be redefined later by \pkg{l3io}.
@@ -2485,7 +2486,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}
+% \begin{macro}[documented-as=\cs_set_nopar:Npn]
 %   {
 %     \cs_set_nopar:cpn  , \cs_set_nopar:cpx  ,
 %     \cs_gset_nopar:cpn , \cs_gset_nopar:cpx ,
@@ -2513,7 +2514,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
+% \begin{macro}[documented-as=\cs_set:Npn]
 %   {
 %     \cs_set:cpn  , \cs_set:cpx  ,
 %     \cs_gset:cpn , \cs_gset:cpx ,
@@ -2531,7 +2532,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
+% \begin{macro}[documented-as=\cs_set_protected_nopar:Npn]
 %   {
 %     \cs_set_protected_nopar:cpn  , \cs_set_protected_nopar:cpx  ,
 %     \cs_gset_protected_nopar:cpn , \cs_gset_protected_nopar:cpx ,
@@ -2549,7 +2550,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
+% \begin{macro}[documented-as=\cs_set_protected:Npn]
 %   {
 %     \cs_set_protected:cpn  , \cs_set_protected:cpx  ,
 %     \cs_gset_protected:cpn , \cs_gset_protected:cpx ,
@@ -2834,7 +2835,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}
+% \begin{macro}[documented-as=\cs_set:Nn]
 %   {
 %     \cs_set:cn                  , \cs_set:cx                  ,
 %     \cs_set_nopar:cn            , \cs_set_nopar:cx            ,
