--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -69,9 +69,9 @@
 % \begin{documentation}
 %
 % This module provides functions for working with external files. Some of these
-% functions apply to an entire file, and have prefix \cs{file_\ldots}, while
+% functions apply to an entire file, and have prefix \cs[no-index]{file_\ldots}, while
 % others are used to work with files on a line by line basis and have prefix
-% \cs{ior_\ldots} (reading) or \cs{iow_\ldots} (writing).
+% \cs[no-index]{ior_\ldots} (reading) or \cs[no-index]{iow_\ldots} (writing).
 %
 % It is important to remember that when reading external files \TeX{} will
 % attempt to locate them both the operating system path and entries in the
@@ -178,9 +178,9 @@
 %   \end{syntax}
 %   Globally reserves the name of the \meta{stream}, either for reading
 %   or for writing as appropriate. The \meta{stream} is not opened until
-%   the appropriate \cs{\ldots_open:Nn} function is used. Attempting to
+%   the appropriate \cs[no-index]{\ldots_open:Nn} function is used. Attempting to
 %   use a \meta{stream} which has not been opened is an error, and the
-%   \meta{stream} will behave as the corresponding \cs{c_term_\ldots}.
+%   \meta{stream} will behave as the corresponding \cs[no-index]{c_term_\ldots}.
 % \end{function}
 %
 % \begin{function}[updated = 2012-02-10]{\ior_open:Nn, \ior_open:cn}
