--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -125,7 +125,7 @@
 %   \item Constants: \texttt{pi}, \texttt{deg} (one degree in radians).
 %   \item Dimensions, automatically expressed in points, \emph{e.g.},
 %     \texttt{pc} is~$12$.
-%   \item Automatic conversion (no need for \cs{\meta{type}_use:N}) of
+%   \item Automatic conversion (no need for \cs[no-index]{\meta{type}_use:N}) of
 %     integer, dimension, and skip variables to floating points,
 %     expressing dimensions in points and ignoring the stretch and
 %     shrink components of skips.
@@ -793,7 +793,7 @@
 % a truth value, a floating point expression is \texttt{false} if it is
 % $\pm 0$, and \texttt{true} otherwise, including when it is \nan{}.
 %
-% \begin{function}[tested = m3fp-logic002]{?:}
+% \begin{function}[tested = m3fp-logic002, module = ]{?:}
 %   \begin{syntax}
 %     \cs{fp_eval:n} \{ \meta{operand_1} |?| \meta{operand_2} |:| \meta{operand_3} \}
 %   \end{syntax}
@@ -876,7 +876,7 @@
 %   and \enquote{overflow} occur when appropriate.
 % \end{function}
 %
-% \begin{function}[tested = m3fp-basics004]{+, -, !}
+% \begin{function}[tested = m3fp-basics004, label = !]{+, -, !}
 %   \begin{syntax}
 %     \cs{fp_eval:n} \{ |+| \meta{operand} \}
 %     \cs{fp_eval:n} \{ |-| \meta{operand} \}
