--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -242,7 +242,7 @@
 %<*lua>
 %    \end{macrocode}
 %
-% \begin{macro}{l3kernel}
+% \begin{macro}[int]{l3kernel}
 %   Create a table for the kernel's own use.
 %    \begin{macrocode}
 l3kernel = l3kernel or { }
@@ -258,7 +258,7 @@ local tex_write         = tex.write
 local unicode_utf8_char = unicode.utf8.char
 %    \end{macrocode}
 %
-% \begin{macro}{l3kernel.strcmp}
+% \begin{macro}[int]{l3kernel.strcmp}
 %   String comparison which gives the same results as \pdfTeX{}'s
 %   \tn{pdfstrcmp}, although the ordering should likely not be relied upon!
 %    \begin{macrocode}
@@ -275,7 +275,7 @@ l3kernel.strcmp = strcmp
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{l3kernel.charcat}
+% \begin{macro}[int]{l3kernel.charcat}
 %   Creating arbitrary chars needs a category code table. As set up here,
 %   one may have been assigned earlier (see \pkg{l3bootstrap}) or a hard-coded
 %   one is used. The latter is intended for format mode and should be adjusted
