--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -101,8 +101,8 @@
 %     \prg_new_conditional:Nnn,  \prg_set_conditional:Nnn
 %    }
 %   \begin{syntax}
-%     \cs{prg_new_conditional:Npnn} \cs{\meta{name}:\meta{arg spec}} \meta{parameters} \Arg{conditions} \Arg{code} \\
-%     \cs{prg_new_conditional:Nnn} \cs{\meta{name}:\meta{arg spec}} \Arg{conditions} \Arg{code}
+%     \cs{prg_new_conditional:Npnn} \cs[no-index]{\meta{name}:\meta{arg spec}} \meta{parameters} \Arg{conditions} \Arg{code} \\
+%     \cs{prg_new_conditional:Nnn} \cs[no-index]{\meta{name}:\meta{arg spec}} \Arg{conditions} \Arg{code}
 %   \end{syntax}
 %   These functions create a family of conditionals using the same
 %   \Arg{code} to perform the test created. Those conditionals are
@@ -121,8 +121,8 @@
 %     \prg_new_protected_conditional:Nnn,  \prg_set_protected_conditional:Nnn
 %   }
 %   \begin{syntax}
-%     \cs{prg_new_protected_conditional:Npnn} \cs{\meta{name}:\meta{arg spec}} \meta{parameters} \Arg{conditions} \Arg{code} \\
-%     \cs{prg_new_protected_conditional:Nnn} \cs{\meta{name}:\meta{arg spec}} \Arg{conditions} \Arg{code}
+%     \cs{prg_new_protected_conditional:Npnn} \cs[no-index]{\meta{name}:\meta{arg spec}} \meta{parameters} \Arg{conditions} \Arg{code} \\
+%     \cs{prg_new_protected_conditional:Nnn} \cs[no-index]{\meta{name}:\meta{arg spec}} \Arg{conditions} \Arg{code}
 %   \end{syntax}
 %   These functions create a family of protected conditionals using the
 %   same \Arg{code} to perform the test created. The \meta{code} does
@@ -138,21 +138,21 @@
 % The conditionals are defined by \cs{prg_new_conditional:Npnn} and
 % friends as:
 % \begin{itemize}
-%   \item \cs{\meta{name}_p:\meta{arg spec}} --- a predicate function
+%   \item \cs[no-index]{\meta{name}_p:\meta{arg spec}} --- a predicate function
 %     which will supply either a logical \texttt{true} or logical
 %     \texttt{false}. This function is intended for use in cases where
 %     one or more logical tests are combined to lead to a final outcome.
 %     This function cannot be defined for \texttt{protected}
 %     conditionals.
-%   \item \cs{\meta{name}:\meta{arg spec}T} --- a function with one more
+%   \item \cs[no-index]{\meta{name}:\meta{arg spec}T} --- a function with one more
 %     argument than the original \meta{arg spec} demands. The \meta{true
 %       branch} code in this additional argument will be left on the
 %     input stream only if the test is \texttt{true}.
-%   \item \cs{\meta{name}:\meta{arg spec}F} --- a function with one more
+%   \item \cs[no-index]{\meta{name}:\meta{arg spec}F} --- a function with one more
 %     argument than the original \meta{arg spec} demands. The
 %     \meta{false branch} code in this additional argument will be left
 %     on the input stream only if the test is \texttt{false}.
-%   \item \cs{\meta{name}:\meta{arg spec}TF} --- a function with two
+%   \item \cs[no-index]{\meta{name}:\meta{arg spec}TF} --- a function with two
 %     more argument than the original \meta{arg spec} demands. The
 %     \meta{true branch} code in the first additional argument will be
 %     left on the input stream if the test is \texttt{true}, while the
@@ -192,7 +192,7 @@
 %
 % \begin{function}{\prg_new_eq_conditional:NNn, \prg_set_eq_conditional:NNn}
 %   \begin{syntax}
-%     \cs{prg_new_eq_conditional:NNn} \cs{\meta{name_1}:\meta{arg spec_1}} \cs{\meta{name_2}:\meta{arg spec_2}} \Arg{conditions}
+%     \cs{prg_new_eq_conditional:NNn} \cs[no-index]{\meta{name_1}:\meta{arg spec_1}} \cs[no-index]{\meta{name_2}:\meta{arg spec_2}} \Arg{conditions}
 %   \end{syntax}
 %   These functions copy a family of conditionals. The \texttt{new} version
 %   will check for existing definitions (\emph{cf.}~\cs{cs_new:Npn}) whereas
@@ -297,7 +297,7 @@
 %     \cs{bool_set:Nn} \meta{boolean} \Arg{boolexpr}
 %   \end{syntax}
 %   Evaluates the \meta{boolean expression} as described for
-%   \cs{bool_if:n(TF)}, and sets the \meta{boolean} variable to
+%   \cs{bool_if:nTF}, and sets the \meta{boolean} variable to
 %   the logical truth of this evaluation.
 % \end{function}
 %
@@ -594,10 +594,10 @@
 %
 % \begin{function}[EXP]{\__prg_break_point:Nn}
 %   \begin{syntax}
-%     \cs{__prg_break_point:Nn} \cs{\meta{type}_map_break:} \meta{tokens}
+%     \cs{__prg_break_point:Nn} \cs[no-index]{\meta{type}_map_break:} \meta{tokens}
 %   \end{syntax}
 %   Used to mark the end of a recursion or mapping: the functions
-%   \cs{\meta{type}_map_break:} and \cs{\meta{type}_map_break:n} use
+%   \cs[no-index]{\meta{type}_map_break:} and \cs[no-index]{\meta{type}_map_break:n} use
 %   this to break out of the loop. After the loop ends, the
 %   \meta{tokens} are inserted into the input stream. This occurs even
 %   if the break functions are \emph{not} applied:
@@ -607,15 +607,15 @@
 %
 % \begin{function}[EXP]{\__prg_map_break:Nn}
 %   \begin{syntax}
-%     \cs{__prg_map_break:Nn} \cs{\meta{type}_map_break:} \Arg{user code}
+%     \cs{__prg_map_break:Nn} \cs[no-index]{\meta{type}_map_break:} \Arg{user code}
 %     \ldots{}
-%     \cs{__prg_break_point:Nn} \cs{\meta{type}_map_break:} \Arg{ending code}
+%     \cs{__prg_break_point:Nn} \cs[no-index]{\meta{type}_map_break:} \Arg{ending code}
 %   \end{syntax}
 %   Breaks a recursion in mapping contexts, inserting in the input
 %   stream the \meta{user code} after the \meta{ending code} for the
 %   loop.  The function breaks loops, inserting their \meta{ending
 %     code}, until reaching a loop with the same \meta{type} as its
-%   first argument.  This \cs{\meta{type}_map_break:} argument is simply
+%   first argument.  This \cs[no-index]{\meta{type}_map_break:} argument is simply
 %   used as a recognizable marker for the \meta{type}.
 % \end{function}
 %
