--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -1925,7 +1925,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[pTF]{\tl_if_empty:o}
+% \begin{macro}[pTF,documented-as=\tl_if_empty:nTF]{\tl_if_empty:o}
 % \begin{macro}[EXP,aux]{\@@_if_empty_return:o}
 %   The auxiliary function \cs{@@_if_empty_return:o} is for use
 %   in various token list conditionals which reduce to testing
@@ -2082,8 +2082,8 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\tl_case:Nn, \tl_case:cn}
 % \begin{macro}[EXP, TF]{\tl_case:Nn, \tl_case:cn}
+% \begin{macro}[EXP]{\tl_case:Nn, \tl_case:cn}
 % \begin{macro}[EXP, aux]{\@@_case:nnTF}
 % \begin{macro}[aux, EXP]{\@@_case:Nw}
 % \begin{macro}[int, EXP]{\__prg_case_end:nw}
@@ -2948,7 +2948,7 @@
 %
 % \subsection{Deprecated functions}
 %
-% \begin{macro}{\tl_to_lowercase:n, \tl_to_uppercase:n}
+% \begin{macro}[deprecated=2017-12-31]{\tl_to_lowercase:n, \tl_to_uppercase:n}
 %   For removal after 2017-12-31.
 %    \begin{macrocode}
 \cs_new_protected:Npn \tl_to_lowercase:n #1
