--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1360,7 +1360,7 @@
 %   current scope but exists at a higher level, we do not use \cs{prop_new:c}
 %   but rather \cs{prop_set_eq:cN}. The function \cs{__chk_log:x} only
 %   writes to the log file if logging all new functions is active: without
-%   it keys would not show up (as we are not using \cs{..._new}).
+%   it keys would not show up (as we are not using \cs[no-index]{..._new}).
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_ensure_exist:n #1
   {
@@ -2468,7 +2468,7 @@
 %
 % \subsection{Deprecated functions}
 %
-% \begin{macro}{.value_forbidden:}
+% \begin{macro}[deprecated = 2017]{.value_forbidden:}
 % \begin{macro}{.value_required:}
 %   Deprecated 2015-07-14.
 %    \begin{macrocode}
