Replace explicit quotes by \enquote
All instances were \enquote{my fault}.

--- a/l3kernel/l3fp-extended.dtx
+++ b/l3kernel/l3fp-extended.dtx
@@ -634,8 +634,8 @@
 % \subsection{Extended-precision floating point numbers}
 %
 % In this section we manipulate floating point numbers with roughly $24$
-% significant figures (``extended-precision'' numbers, in short,
-% ``ep''), which take the form of an integer exponent, followed by a
+% significant figures (\enquote{extended-precision} numbers, in short,
+% \enquote{ep}), which take the form of an integer exponent, followed by a
 % comma, then six groups of digits, ending with a semicolon.  The first
 % group of digit may be any non-negative integer, while other groups of
 % digits have $4$~digits.  In other words, an extended-precision number
