--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1024,7 +1024,7 @@
 %   \item A character token, characterized by its character code and
 %     category code (one of $1$, $2$, $3$, $4$, $6$, $7$, $8$, $10$,
 %     $11$ or~$12$ whose meaning is described below).\footnote{In
-%     \LuaTeX{}, there is also the case of ``bytes'', which behave as
+%     \LuaTeX{}, there is also the case of \enquote{bytes}, which behave as
 %     character tokens of category code $12$~(other) and character code
 %     between $1114112$ and~$1114366$.  They are used to output
 %     individual bytes to files, rather than UTF-8.}
@@ -1035,7 +1035,7 @@
 %   \item Expanding \tn{the}\th{font} results in a token that looks
 %     identical to the command that was used to select the current font
 %     (such as \tn{tenrm}) but it differs from it in shape.
-%   \item A ``frozen'' |\relax|, which differs from the primitive in
+%   \item A \enquote{frozen} |\relax|, which differs from the primitive in
 %     both shape and meaning, is inserted when the closing \tn{fi} of a
 %     conditional is encountered before the conditional is evaluated.
 %   \item An |\endtemplate| (which expands to |\outer endtemplate:|)
